# openbrewerydb-rust-api

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: simple.rs
src/: breweries.rs  client.rs  errors.rs  lib.rs  search.rs
tests/: brewery_find_tests.rs  brewery_random_tests.rs  single_brewery_tests.rs
