[package]
name = "openbrewerydb-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = "0.3"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
