[package]
name = "openbrewerydb"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/openbrewerydb"
homepage = "https://github.com/joeymckenzie/openbrewerydb-rust-api/"
repository = "https://github.com/joeymckenzie/openbrewerydb-rust-api/"
authors = ["Joey McKenzie <joey.mckenzie27@gmail.com>"]
keywords = ["brewery", "beer", "openbrewery"]
categories = ["api-bindings"]
readme = "README.md"
description = "Open Brewery DB API bindings for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = "0.3"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
